[gd_scene load_steps=26 format=3 uid="uid://qvbki1ipp72p"]

[ext_resource type="Script" uid="uid://jbydpt773v5a" path="res://src/entities/hostile/nav_entity.gd" id="1_l8d6l"]
[ext_resource type="Script" uid="uid://bxe7uci7t77tx" path="res://src/entities/sb_variables.gd" id="2_2w8np"]
[ext_resource type="Texture2D" uid="uid://05eixr261ttf" path="res://src/entities/shadow.png" id="2_xd2xn"]
[ext_resource type="Texture2D" uid="uid://51l0bvgjidxn" path="res://src/player/2D/madotsuki/display/default/_RESET.png" id="3_l8d6l"]
[ext_resource type="Script" uid="uid://dlvvx5cthl4bp" path="res://src/systems/utils/spritesheet_formatter.gd" id="4_ausy4"]
[ext_resource type="Script" uid="uid://dd0qxrsakskma" path="res://src/entities/component/sb_component_receiver.gd" id="5_33g5e"]
[ext_resource type="Script" uid="uid://bnajku7ggsr2q" path="res://src/systems/world_loop/loopable_component.gd" id="5_yha0i"]
[ext_resource type="Script" uid="uid://dyhtvuyxwohdq" path="res://src/entities/component/sb_sprite_handler.gd" id="6_yha0i"]
[ext_resource type="Script" uid="uid://sd3feymdmkd6" path="res://src/systems/tools/FSM/sentient_fsm.gd" id="7_2w8np"]
[ext_resource type="Script" uid="uid://qdqcvtymsa3v" path="res://src/systems/tools/FSM/sentient_state.gd" id="8_0k3de"]
[ext_resource type="Script" uid="uid://bhmqr5byqpscr" path="res://src/entities/hostile/stance_states/idle.gd" id="8_xd2xn"]
[ext_resource type="Script" uid="uid://bk8x1gghf4e05" path="res://src/entities/hostile/stance_states/walk.gd" id="9_vfpfq"]
[ext_resource type="Script" uid="uid://rbvkxb3m2omw" path="res://src/entities/hostile/behaviour_states/idle.gd" id="10_w825i"]
[ext_resource type="Script" uid="uid://bj1oqttajdq2m" path="res://src/entities/hostile/behaviour_states/wander.gd" id="11_iiqm4"]
[ext_resource type="Script" uid="uid://clwsghva612ul" path="res://src/entities/hostile/behaviour_states/observe.gd" id="12_cbhm8"]
[ext_resource type="Script" uid="uid://c4jf04237m0wj" path="res://src/entities/hostile/behaviour_states/wander_sub_idle.gd" id="13_33g5e"]
[ext_resource type="Script" uid="uid://dbo5xans8s5ib" path="res://src/entities/hostile/behaviour_states/chase.gd" id="13_hjdcm"]
[ext_resource type="Script" uid="uid://cbg0uhsr4h72h" path="res://src/entities/hostile/behaviour_states/stare_at.gd" id="14_faqv6"]
[ext_resource type="Script" uid="uid://cgrlne63ptsn5" path="res://src/entities/hostile/behaviour_states/wander_sub_move.gd" id="14_yha0i"]
[ext_resource type="Script" uid="uid://sahjehrg3n8o" path="res://src/entities/hostile/behaviour_states/follow.gd" id="15_icb7j"]
[ext_resource type="Script" uid="uid://dgrha4aqsx4kh" path="res://src/systems/audio/sound_player.gd" id="17_21guf"]
[ext_resource type="Script" uid="uid://bokon3yk8g4bw" path="res://src/systems/utils/on_screen_notifier.gd" id="22_0k3de"]

[sub_resource type="Resource" id="Resource_0k3de"]
resource_local_to_scene = true
resource_name = "sb_variables"
script = ExtResource("2_2w8np")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_18lqh"]
blend_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18lqh"]
size = Vector2(13, 4)

[node name="template_neutral" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent", "stance_fsm", "behaviour_fsm", "sprite_renderer", "shadow_renderer")]
script = ExtResource("1_l8d6l")
nav_agent = NodePath("nav")
stance_fsm = NodePath("stance_fsm")
behaviour_fsm = NodePath("behaviour_fsm")
values = SubResource("Resource_0k3de")
sprite_renderer = NodePath("sprite_renderer")
shadow_renderer = NodePath("shadow_renderer")

[node name="shadow_renderer" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_18lqh")
position = Vector2(0, 16)
texture = ExtResource("2_xd2xn")
offset = Vector2(0, -24)

[node name="sprite_renderer" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("3_l8d6l")
script = ExtResource("4_ausy4")
frame_dimensions = Vector2i(20, 26)
metadata/_custom_type_script = "uid://dlvvx5cthl4bp"

[node name="sb_sprite" type="Node2D" parent="sprite_renderer" node_paths=PackedStringArray("target")]
script = ExtResource("5_yha0i")
target = NodePath("..")
properties = PackedStringArray("texture", "frame", "flip_h")
do_not_update = false
metadata/_custom_type_script = "uid://bnajku7ggsr2q"

[node name="sb_components" type="Node2D" parent="."]
script = ExtResource("5_33g5e")
metadata/_custom_type_script = "uid://dd0qxrsakskma"

[node name="sprite_handler" type="Node" parent="sb_components"]
script = ExtResource("6_yha0i")
metadata/_custom_type_script = "uid://bgisym1hdeqgt"

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_18lqh")

[node name="nav" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.0
navigation_layers = 2
avoidance_enabled = true
radius = 15.0
avoidance_layers = 10
avoidance_mask = 10

[node name="stance_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_2w8np")
initial_state = NodePath("IDLE")
metadata/_custom_type_script = "uid://co5edhtkgx3g8"

[node name="IDLE" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("8_xd2xn")
transitions = [NodePath("../WALK"), NodePath("../RUN")]
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="WALK" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("9_vfpfq")
transitions = [NodePath("../IDLE"), NodePath("../RUN")]
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="RUN" type="Node" parent="stance_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("8_0k3de")
transitions = [NodePath("../WALK"), NodePath("../IDLE")]
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="behaviour_fsm" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_2w8np")
initial_state = NodePath("STILL")
metadata/_custom_type_script = "uid://co5edhtkgx3g8"

[node name="path_update" type="Timer" parent="behaviour_fsm"]

[node name="STILL" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("10_w825i")
transitions = [NodePath("../WANDER"), NodePath("../OBSERVE"), NodePath("../CHASE"), NodePath("../STARE_AT"), NodePath("../FOLLOW")]
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="WANDER" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("transitions")]
script = ExtResource("11_iiqm4")
transitions = [NodePath("../STILL"), NodePath("../OBSERVE"), NodePath("../CHASE")]
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="WANDER_IDLE" type="Node" parent="behaviour_fsm/WANDER" node_paths=PackedStringArray("idle_timer", "repath_timer", "transitions")]
script = ExtResource("13_33g5e")
idle_timer = NodePath("idle_timer")
repath_timer = NodePath("repath_timer")
transitions = [NodePath("../WANDER_MOVE")]

[node name="idle_timer" type="Timer" parent="behaviour_fsm/WANDER/WANDER_IDLE"]

[node name="repath_timer" type="Timer" parent="behaviour_fsm/WANDER/WANDER_IDLE"]

[node name="WANDER_MOVE" type="Node" parent="behaviour_fsm/WANDER" node_paths=PackedStringArray("transitions")]
script = ExtResource("14_yha0i")
transitions = [NodePath("../WANDER_IDLE")]

[node name="OBSERVE" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("stance_fsm", "hesitance_timer")]
script = ExtResource("12_cbhm8")
stance_fsm = NodePath("../../stance_fsm")
hesitance_timer = NodePath("hesitance_timer")
metadata/_custom_type_script = "uid://sd3feymdmkd6"

[node name="hesitance_timer" type="Timer" parent="behaviour_fsm/OBSERVE"]

[node name="CHASE" type="Node" parent="behaviour_fsm" node_paths=PackedStringArray("stance_fsm")]
script = ExtResource("13_hjdcm")
stance_fsm = NodePath("../../stance_fsm")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="STARE_AT" type="Node" parent="behaviour_fsm"]
script = ExtResource("14_faqv6")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="FOLLOW" type="Node" parent="behaviour_fsm"]
script = ExtResource("15_icb7j")
metadata/_custom_type_script = "uid://qdqcvtymsa3v"

[node name="sound_player" type="AudioStreamPlayer" parent="."]
script = ExtResource("17_21guf")
metadata/_custom_type_script = "uid://dgrha4aqsx4kh"

[node name="sb_loop" type="Node2D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("5_yha0i")
target = NodePath("..")
do_not_dupe = true
do_not_include_occlusions = true
metadata/_custom_type_script = "uid://bnajku7ggsr2q"

[node name="enabler" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-160, -90, 320, 180)
script = ExtResource("22_0k3de")
metadata/_custom_type_script = "uid://bokon3yk8g4bw"
